finish tidy data part blog

--- a/_posts/2025-09-24-milestone-1.md
+++ b/_posts/2025-09-24-milestone-1.md
@@ -115,6 +115,7 @@ This command automatically creates the correct folder structure and collects eve
 
 ## <span style="color:#1E90FF;">Interactive Debugging Tool Question<span>
 code related to it:
+
 `ift6758/data/load_game.py`
 `ift6758/data/debugging.ipynb`
 
@@ -144,4 +145,37 @@ This example corresponds to **Event #52**, a **faceoff** occurring at the start 
 - **Teams:** BOS (Home) vs OTT (Away)
 - **Final Score:** BOS 1 – OTT 2
 - **Shots on Goal:** BOS 29  \|  OTT 26
+
+## <span style="color:#1E90FF;">Tidy Data Questions<span>
+code related to it: `ift6758/data/tidying.py`
+`ift6758/data/tidying.ipynb`
+
+During our  tidy procedure, we found that The new data feed no longer has information that shows if a goal is a short-handed goal, even strength or power play goal. This can be determined from the situationCode that is present and knowing the team what the scorer is associated to.
+Glig using these four characters to represent the four-digit value then the meaning of the digits is as follows:
+
+G – goalie on ice for away team
+
+l – on ice skaters for away team
+
+i – on ice skaters for home team
+
+g – goalie on ice for away team
+Here's a small snippet of our final dataframe
+![tidy_data](public/milestone1/tidyData.png)
+
+We could use these features  from the data available in this dataset:
+- **Rebound shot**:It means a shot taken immediately after a prior shot by the same team, often indicate that  the goalie is out of position.
+we could compute it by checking the same team’s previous shot-like event and point
+as a rebound when the time since the previous attempt is ≤ 5 s and the distance between locations is ≤ 20 ft. We label it as 1 when
+rebound and 0 if not.
+
+- **Shot off the rush**: It means a shot taken quickly after a fast up-ice transition, before the defense is set. This feature captures quick-entry, immediate-shot situations that angle and distance alone can’t fully explain.
+We label it as 1 when the shooter makes forward progress toward the attacking net (ex: ≥50 ft) and the time since the
+same team’s previous event is ≤6 s; otherwise 0.
+
+- **Empty net**: It means that defending team has no goalie on the ice (typically when pulled for an extra skater late in the game or during a delayed penalty),
+which makes shots far more likely to score. We could get this value  from the situationCode by reading the goalie-presence flags for home and away, if the away-goalie flag is 0 it’s an empty net. 
+
+
+
 
