add simple visualization and advanced visualization

--- a/_posts/2025-09-24-milestone-1.md
+++ b/_posts/2025-09-24-milestone-1.md
@@ -99,7 +99,7 @@ It uses the prefix `03` for playoff `GAME_ID`s, the last three digits include th
 Each playoff year starts with **eight matchups** in Round 1, followed by four in Round 2, two in Round 3, and one in Round 4.
 The function systematically generates each `GAME_ID` for all rounds and matchups, and downloads them with `get_game()`.
 The results are stored under:
-dataStore/<year>/playoff/
+dataStore/year/playoff/
 
 
 #### `download_all()`
@@ -159,11 +159,17 @@ l – on ice skaters for away team
 
 i – on ice skaters for home team
 
-g – goalie on ice for away team
+g – goalie on ice for home team
+
 Here's a small snippet of our final dataframe
+
 ![tidy_data](public/milestone1/tidyData.png)
 
 We could use these features  from the data available in this dataset:
+
+- **Shot distance**: It measures how far a player is from the opponent's net when taking a shot. It is calculated using the x and y coordinates provided in the play by play data.
+  The closer the player is to the net, the higher the chance of scoring.
+
 - **Rebound shot**:It means a shot taken immediately after a prior shot by the same team, often indicate that  the goalie is out of position.
 we could compute it by checking the same team’s previous shot-like event and point
 as a rebound when the time since the previous attempt is ≤ 5 s and the distance between locations is ≤ 20 ft. We label it as 1 when
@@ -173,9 +179,84 @@ rebound and 0 if not.
 We label it as 1 when the shooter makes forward progress toward the attacking net (ex: ≥50 ft) and the time since the
 same team’s previous event is ≤6 s; otherwise 0.
 
-- **Empty net**: It means that defending team has no goalie on the ice (typically when pulled for an extra skater late in the game or during a delayed penalty),
-which makes shots far more likely to score. We could get this value  from the situationCode by reading the goalie-presence flags for home and away, if the away-goalie flag is 0 it’s an empty net. 
+## <span style="color:#1E90FF;">Simple Visualizations</span>
+
+code related to it:
+`ift6758/data/simple_visualization.py`
+`ift6758/data/somple_visualization.ipynb`
+
+**Question1**:
+
+![simpleQ1](public/milestone1/SimpleQ1.png)
+We can observe from the figure that, when comparing the number of goals to the number of shots for each shot type, the **deflected shot** appears to be the **most successful**, converting 19.8% of the time.
+The tip-in follows closely with a success rate of 19.5%. This indicates that **deflected shots** are the **most dangerous**, as they are the most likely to result in a goal.
+On the other hand, the **wrist shot** is clearly the **most common** type of shot, as shown by its much higher count compared to the others.
+We chose this figure because it effectively conveys all the key information needed to compare shot types at a glance. The **height of the bars** represents how often each shot type was attempted, the **red portion** of each bar shows how many of those resulted in goals, and the percentage labels on top provide a quick and precise measure of scoring efficiency. This visualization allows us to quickly identify both the most frequently used and the most effective shot types within a easy-to-read chart.
+
+
+**Question2**:
+
+![simpleQ2](public/milestone1/SimpleQ2.png)
+From the visualization, we can observe a clear inverse relationship between shot distance and goal probability: the **farther** a shot is taken from the net, the **less** likely it is to result in a goal. Conversely, shots taken from closer ranges have a much higher chance of scoring. This trend remains consistent across all three seasons.
+
+In the comparison plot (bottom right), we can see that the curves for the 2018–19, 2019–20, and 2020–21 seasons follow almost identical patterns, indicating that the relationship between distance and scoring probability has remained **stable** over time.
+
+We chose this figure because it provides both a detailed view of each individual season and a concise comparative overview. The individual plots make it easier to examine season-specific variations, while the combined plot highlights the overall trend and confirms that shooting efficiency relative to distance has not changed significantly across the three seasons.
+
+**Question3**:
+
+![simpleQ3](public/milestone1/SimpleQ3.png)
+The figure illustrates the relationship between goal percentage and shot distance for different shot types during the 2018–2019 NHL season. Overall, we observe that the likelihood of scoring **decreases** significantly as the distance from the net **increases**, regardless of the shot type.
+
+Among all shot types, wrap-around and tip-in shots stand out as the most dangerous, showing the highest goal percentages, often exceeding **30–50%** at close range. These types of shots usually occur near the crease, where goalies have limited time to react and positioning becomes critical. Deflected shots also exhibit relatively high conversion rates at mid-range distances, as their unpredictable trajectories make them difficult to stop. In contrast, wrist and snap shots display moderate effectiveness at shorter ranges but decline steadily as distance increases. Interestingly, slap shots display a noticeable peak around 18 feet, with a goal rate of about 25%, suggesting that they can be particularly threatening when taken from this distance — likely due to their speed and power. In contrast, backhand and wrist shots tend to have lower goal percentages overall, especially as distance increases.
+
+Overall, the results emphasize that both proximity and shot type strongly influence scoring chances, with close-range and fast, unpredictable shots proving the most effective.
 
 
 
+## <span style="color:#1E90FF;">Advanced Visualizations: Shot Maps</span>
+code related to it:
+`ift6758/data/advanced_visualization.py`
+`ift6758/data/advanced_vs.ipynb`
 
+**Question1**:
+
+{% include offensive_zone_20162017.html %}
+{% include offensive_zone_20172018.html %}
+{% include offensive_zone_20182019.html %}
+{% include offensive_zone_20192020.html %}
+{% include offensive_zone_20202021.html %}
+
+**Question2**:
+
+The excess shot heatmap shows how each team compares across the league, highlighting their favorite shooting zones and giving a sense of offensive strength. Dominant teams tend to take more shots than the league average and perhaps there are certain players who are more effective at shooting in a specific range. We kept –0.1 to +0.1 as a neutral color so small differences fade out and only the real hot and cold spots stand out.
+
+**Question3**:
+![AdvanceQ3A](public/milestone1/AdvanceQ3A.png)
+
+The Avalanche’s 2016/2017 excess shot map shows a clear **negative** concentration around the net, this implies  they took far fewer shots from good scoring areas compared to the league average. Since shooting closer to the net strongly correlates with goal scoring (see earlier figure on correlation of shot and goal compared to distance), this suggests their offensive production was limited. Instead, the Avalanche generated more shots from the middle-left side of the rink, but these attempts came from farther out, where chances of scoring are lower.
+
+Overall, this pattern shows the team likely struggled offensively that season. (Because this only reflects shooting, we can’t infer anything about their defensive play.) if we observe their standings that year, we find evidence that supports the team struggled in the **16/17 season**, having the lowest points in the league. Most [articles](https://www.denverpost.com/2017/04/06/colorado-avalanche-2017-season-in-review/) suggest that the avalanche were poor this season due to major injuries on their offense as well as coach instability with a new head coach joining the team
+
+![AdvanceQ3B](public/milestone1/AdvanceQ3B.png)
+![AdvanceQ3C](public/milestone1/AdvanceQ3C.png)
+
+Ref:
+
+[https://www.nhl.com/standings/2017-04-09/league](https://www.nhl.com/standings/2017-04-09/league)
+
+[https://www.thescore.com/news/1276615](https://www.nhl.com/standings/2017-04-09/league)
+
+![AdvanceQ3D](public/milestone1/AdvanceQ3D.png)
+
+Compared to the previous graph, the Avalanche generated more shots than the league average across almost the entire rink, especially near the net. This is a stark difference to their 2016/2017 season, when they were shooting less than the league in those critical areas. The deeper red zones highlight how much more effective they were offensively. While we cannot conclude their overall performance without examining defense, this season clearly placed them among the stronger offensive teams. The results in the table as well reinforce these findings (see below).
+
+![AdvanceQ3E](public/milestone1/AdvanceQ3E.png)
+
+![AdvanceQ3F](public/milestone1/AdvanceQ3F.png)
+
+Ref:
+
+[https://www.nhl.com/standings/2021-05-19/division](https://www.nhl.com/standings/2021-05-19/division)
+
+[https://www.hockey-reference.com/teams/COL/2021.html](https://www.hockey-reference.com/teams/COL/2021.html )
