Changing image and rephrasing some wording
Changing image and rephrasing some wording

--- a/_posts/2025-09-24-milestone-1.md
+++ b/_posts/2025-09-24-milestone-1.md
@@ -78,7 +78,6 @@ By using this function, the program can skip unnecessary downloads if the file i
 
 
 
-
 #### `get_game()`
 This is the core function of the program.
 It takes a single `GAME_ID` and an output directory as inputs.
@@ -219,6 +218,10 @@ code related to it:
 `ift6758/data/advanced_visualization.py`
 `ift6758/data/advanced_vs.ipynb`
 
+figures are created in the following directory after execution
+`ift6758/data/plot_figures`
+format
+`offensive_zone_{season}.html`
 **Question1**:
 
 {% include offensive_zone_20162017.html %}
@@ -236,16 +239,11 @@ The excess shot heatmap shows how each team compares across the league, highligh
 
 The Avalanche’s 2016/2017 excess shot map shows a clear **negative** concentration around the net, this implies  they took far fewer shots from good scoring areas compared to the league average. Since shooting closer to the net strongly correlates with goal scoring (see earlier figure on correlation of shot and goal compared to distance), this suggests their offensive production was limited. Instead, the Avalanche generated more shots from the middle-left side of the rink, but these attempts came from farther out, where chances of scoring are lower.
 
-Overall, this pattern shows the team likely struggled offensively that season. (Because this only reflects shooting, we can’t infer anything about their defensive play.) if we observe their standings that year, we find evidence that supports the team struggled in the **16/17 season**, having the lowest points in the league. Most [articles](https://www.denverpost.com/2017/04/06/colorado-avalanche-2017-season-in-review/) suggest that the avalanche were poor this season due to major injuries on their offense as well as coach instability with a new head coach joining the team
+Overall, this pattern shows the team likely struggled offensively that season. (Because this only reflects shooting, we can’t infer anything about their defensive play.) if we observe their standings that year, we find evidence that supports the team struggled in the **16/17 season**, having the lowest points in the league. Most [articles](https://www.denverpost.com/2017/04/06/colorado-avalanche-2017-season-in-review/) suggest that the avalanche were poor this season due to major injuries on key players as well as coach instability with a new head coach joining the team
 
 ![AdvanceQ3B](public/milestone1/AdvanceQ3B.png)
 ![AdvanceQ3C](public/milestone1/AdvanceQ3C.png)
 
-Ref:
-
-[https://www.nhl.com/standings/2017-04-09/league](https://www.nhl.com/standings/2017-04-09/league)
-
-[https://www.thescore.com/news/1276615](https://www.nhl.com/standings/2017-04-09/league)
 
 ![AdvanceQ3D](public/milestone1/AdvanceQ3D.png)
 
@@ -255,8 +253,12 @@ Compared to the previous graph, the Avalanche generated more shots than the leag
 
 ![AdvanceQ3F](public/milestone1/AdvanceQ3F.png)
 
-Ref:
+References and sources:
 
 [https://www.nhl.com/standings/2021-05-19/division](https://www.nhl.com/standings/2021-05-19/division)
 
 [https://www.hockey-reference.com/teams/COL/2021.html](https://www.hockey-reference.com/teams/COL/2021.html )
+
+[https://www.nhl.com/standings/2017-04-09/league](https://www.nhl.com/standings/2017-04-09/league)
+
+[https://www.thescore.com/news/1276615](https://www.nhl.com/standings/2017-04-09/league)
