Added the response and images for question 4
Included authors and added the results and images for questions 4

--- a/_posts/2025-09-24-milestone-1.md
+++ b/_posts/2025-09-24-milestone-1.md
@@ -3,6 +3,7 @@ layout: post
 title: Milestone 1
 ---
 
+Authors: Anissa Djouhri, Qianyun Shen, Gafran Ijaz, Saleem Ibrahim (Team 1) 
 ## <span style="color:#1E90FF;">Data Acquisition Tutorial</span>
 
 code related to it:
@@ -252,6 +253,20 @@ Compared to the previous graph, the Avalanche generated more shots than the leag
 ![AdvanceQ3E](public/milestone1/AdvanceQ3E.png)
 
 ![AdvanceQ3F](public/milestone1/AdvanceQ3F.png)
+
+
+**Question 4** 
+
+
+|![AdvanceQ3I](public/milestone1/AdvanceQ3I.png){:width="300px"} | ![AdvanceQ3J](public/milestone1/AdvanceQ3J.png){:width="300px"}| ![AdvanceQ3G](public/milestone1/AdvanceQ3G.png){:width="300px"} |
+
+ |![AdvanceQ3H](public/milestone1/AdvanceQ3H.png){:width="300px"} |![AdvanceQ3K](public/milestone1/AdvanceQ3K.png){:width="300px"} |![AdvanceQ3L](public/milestone1/AdvanceQ3L.png){:width="300px"} |
+ 
+As we can see from the excess shot map of the Buffalo Sabres, their excess shot map for the year **2018-2019** all the way to the year **2020-2021** is very low compared to league average which is shown by the deep blue hue. The entirety of the middle lain is completely blue showing how they don't take the vast majority of their shots from the middle.
+
+When we compare this heatmap for the Tampa Bay Lightning, which from the years **2018-2019** up till **2019-2020**, their excess shots are very centered in the middle lain straight towards the goal and it is highly concentrated around this area. They take less shots compared to the league in any other region comparatively to the central lane. This behaviour changes in the year 2020-2021 for the Lightnings where their excess shots comparatively to the league is **more** from the back right lane around 60 feet from the goal post and at a same distance from the goal post in the middle lane. This could be an outlier, but the underlying premise in these 3 year groups being that they take a significant amount of shots more from the middle lane which could lead to the following hypothesis:
+
+The team which shoots more comparatively to other teams from an advantageous position, the **middle lane**, has a higher success of landing the shots and scoring than if a team, such as the Buffalo Sabres, shoots from mostly anywhere else but the middle lane. So from an observation purely done on this sample size of 2 teams, we can make a naive assumption that the teams which shoot more from the middle lanes compared to the league average have a higher chance of **winning** more games than if they were to shoot from other places than the middle lane.
 
 References and sources:
 
