Update to simple visualization
Added some text to the simple visualization

--- a/_posts/2025-09-24-milestone-1.md
+++ b/_posts/2025-09-24-milestone-1.md
@@ -188,7 +188,7 @@ code related to it:
 **Question1**:
 
 ![simpleQ1](public/milestone1/SimpleQ1.png)
-We can observe from the figure that, when comparing the number of goals to the number of shots for each shot type, the **deflected shot** appears to be the **most successful**, converting 19.8% of the time.
+In this figure, the values displayed above the bars indicate the goal percentage, which corresponds to the ratio of goals to total shots. We can observe from the figure that, when comparing the number of goals to the number of shots for each shot type, the **deflected shot** appears to be the **most successful**, converting 19.8% of the time.
 The tip-in follows closely with a success rate of 19.5%. This indicates that **deflected shots** are the **most dangerous**, as they are the most likely to result in a goal.
 On the other hand, the **wrist shot** is clearly the **most common** type of shot, as shown by its much higher count compared to the others.
 We chose this figure because it effectively conveys all the key information needed to compare shot types at a glance. The **height of the bars** represents how often each shot type was attempted, the **red portion** of each bar shows how many of those resulted in goals, and the percentage labels on top provide a quick and precise measure of scoring efficiency. This visualization allows us to quickly identify both the most frequently used and the most effective shot types within a easy-to-read chart.
