Update on some wording in blog post
Update on some wording in blog post

--- a/_posts/2025-09-24-milestone-1.md
+++ b/_posts/2025-09-24-milestone-1.md
@@ -150,8 +150,7 @@ This example corresponds to **Event #52**, a **faceoff** occurring at the start 
 code related to it: `ift6758/data/tidying.py`
 `ift6758/data/tidying.ipynb`
 
-During our  tidy procedure, we found that The new data feed no longer has information that shows if a goal is a short-handed goal, even strength or power play goal. This can be determined from the situationCode that is present and knowing the team what the scorer is associated to.
-Glig using these four characters to represent the four-digit value then the meaning of the digits is as follows:
+During our  tidy procedure, we found that the new data feed no longer has information that shows if a goal is a short-handed goal, even strength or power play goal. This can be determined from the situationCode that is present and knowing the team what the scorer is associated to. We use four characters to represent the four-digit situation code. The meaning of each character is as follows:
 
 G – goalie on ice for away team
 
