Updated paths to where notebooks can be found
Updated paths to where notebooks can be found

--- a/_posts/2025-09-24-milestone-1.md
+++ b/_posts/2025-09-24-milestone-1.md
@@ -117,7 +117,7 @@ This command automatically creates the correct folder structure and collects eve
 code related to it:
 
 `ift6758/data/load_game.py`
-`ift6758/data/debugging.ipynb`
+`notebooks/debugging.ipynb`
 
 We built a small interactive tool  using ipywidgets to browse play-by-play data game-by-game and event-by-event.
 Users can choose the season year, switch between regular and playoff games, select a game ID, and scrub through events with a slider.
@@ -148,7 +148,7 @@ This example corresponds to **Event #52**, a **faceoff** occurring at the start 
 
 ## <span style="color:#1E90FF;">Tidy Data Questions<span>
 code related to it: `ift6758/data/tidying.py`
-`ift6758/data/tidying.ipynb`
+`notebooks/tidying.ipynb`
 
 During our  tidy procedure, we found that the new data feed no longer has information that shows if a goal is a short-handed goal, even strength or power play goal. This can be determined from the situationCode that is present and knowing the team what the scorer is associated to. We use four characters to represent the four-digit situation code. The meaning of each character is as follows:
 
@@ -182,7 +182,7 @@ same team’s previous event is ≤6 s; otherwise 0.
 
 code related to it:
 `ift6758/data/simple_visualization.py`
-`ift6758/data/somple_visualization.ipynb`
+`notebooks/simple_visualization.ipynb`
 
 **Question1**:
 
@@ -216,7 +216,7 @@ Overall, the results emphasize that both proximity and shot type strongly influe
 ## <span style="color:#1E90FF;">Advanced Visualizations: Shot Maps</span>
 code related to it:
 `ift6758/data/advanced_visualization.py`
-`ift6758/data/advanced_vs.ipynb`
+`notebooks/advanced_vs.ipynb`
 
 figures are created in the following directory after execution
 `ift6758/data/plot_figures`
